# DeepLearning

./: .gitignore  MY_MNIST.py  README.md  autograd_try.py  liine_model_torch.py  line_model_myself.py  my_softmax.py  my_train_predict.py  note.ipynb  pyproject.toml  test.py  train_predict.py  try.py
Config/: vgg_config.toml
MPL/: First_virtual_contest.py  base_knowledge.py  cov_correct.py  mlp_api.py  mlp_my.py  my_dropout.py  my_weight_decay.py  submission.csv
deeplearningcomputer/: LazyInit_my.py  args_learning.py  custom_layer.py  net state  simple_begin.py  y_try
introduction/: distrubute_note.ipynb
line_model/: line_modle_try.py  my_softmax.py  softmax_api.py
modern_cnn/: DeepSeek_AlexNet_for_small_picture.py  deepseek_cifar10_training_20251228_150730.txt  my_AlexNet.py  my_Simplified_AlexNet.py  my_vgg.py  my_vgg_deprecated.py  new_test_log.txt  new_train_log.txt  test_log.txt  vgg16.py
modern_cnn/Result/: deepseek_training_log_m_20251228_145107.txt  new_train_log.txt  train_log.txt
my_cnn/: best_lenet_model.pth  best_lenet_model_d2l.pth  best_lenet_model_modern.pth  best_lenet_model_original.pth  convolution.py  d2l_record.txt  modernRecord.txt  modern_record.txt  muti_channel.py  my_LeNet.py  my_pooling.py  originalRecord.txt  original_record.txt  stride_padding.py  test_log.txt
