[project]
name = "deeplearning"
version = "0.2.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "black==25.12.0",
    "captum>=0.7.0",
    "d2l>=0.17.0",
    "flake8>=7.3.0",
    "imgaug>=0.4.0",
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "matplotlib==3.10.8",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.3.251219",
    "pillow>=12.0.0",
    "pre-commit==4.5.1",
    "scikit-learn==1.8.0",
    "scipy-stubs==1.16.3.3",
    "seaborn>=0.13.2",
    "stringzilla>=4.6.0",
    "toml-rs>=0.2.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
